# for display continuity sake please use 2 spaces instead of tabs

2015-06-13 mmichaud <m.michael.michaud@orange.fr>
  * LayerView / AttributePanel selection synchronization
  * update SetAttributes PlugIn to 0.7.0

2015-06-13 mmichaud <m.michael.michaud@orange.fr>
  * increase readTimout delay of WMSService from 5 to 10

2015-06-08 bertaz
  * Sextante raster layers: fixed bug in nodata color handling when using symbology.

2015-06-04 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Add WMS Legend plugin to WMS layer context menu

2015-06-01 mmichaud <m.michael.michaud@orange.fr>
  * new select tool to select one or several overlapping features

2015-05-25 mmichaud <m.michael.michaud@orange.fr>
  * shx file was not closed

2015-05-25 mmichaud <m.michael.michaud@orange.fr>
  * update SetAttributes extension to version 0.6.1 : shorter initial delay
    for right-click tooltip

2015-05-23 mmichaud <m.michael.michaud@orange.fr>
  * update SetAttributes extension to version 0.6 : right-click on the
    button now displays a rich text tooltip containing the button parameters.
    Add a backgroundColor attribute for the buttons.

2015-05-18 mmichaud <m.michael.michaud@orange.fr>
  * Fix #402 (regression after the fix of #390)

2015-05-17 mmichaud <m.michael.michaud@orange.fr>
  * Fix #390 : selection lost if layer is moved
  * Replace layerManager.remove by category.remove to sort layers :
    much faster and partly solve FR 217
  * Fix #401 : replicate selected features replicated 2 times
  * #319 and #399 deactivate the ctrl feature used to limit selection
    to the selected layers because it is buggy and it is not compatible
    with quasi-mode tool (ctrl already used to switch to select tool)

2015-05-16 ede
  * Fix #400 : Layer changed category untimely

2015-05-14 mmichaud <m.michael.michaud@orange.fr>
  * Arrows to go to next/previous row now also select next/previous feature

2015-05-14 mmichaud <m.michael.michaud@orange.fr>